// $Id$

Feeds 6.x 1.0 XXXXXXXXXXXXXXXXXX
--------------------------------

- #889196 David Goode: Support for non-numeric vocabulary IDs for feature-based
  vocabularies.
- #632920 nickbits, dixon_, David Goode, alex_b et al: Inherit OG, taxonomy,
  language, user properties from parent feed node. Note: Signatures of
  FeedsProcessor::map(), existingItemId(), FeedsParser::getSourceElement()
  changed.
- #897258 TrevorBradley, alex_b: Mapping target nid.
- #873198 BWPanda, morningtime: Import multiple values to tag vocabulary.
- #872772 andrewlevine: Fix buildNode() (and node_load()) called unnecessarily.
- #873240 thsutton: Use isset() to avoid notices.
- #878528 Sutharsan: Don't show file in UI if file does not exist.
- #901798 alex_b: Fix time off in SitemapParser.
- #885724 eliotttf: Avoid array_flip() on non scalars.
- #885052 Hanno: Fix small typo in access rights.
- #863494 ekes, alex_b: Delete temporary enclosures file.
- #851194 alex_b: Featurize - move default functionality from feeds_defaults to
  feeds_fast_news, feeds_import and feeds_news features.
- #617486 alex_b: Create link to original source, view of items on feed nodes.
- #849986 lyricnz, alex_b: Cleaner batch support.
- #866492 lyricnz: Clean up tests.
- #862444 pounard: Do not name files after their enclosure class.
- #851570 morningtime: Avoid trailing slashes when passing file paths to
  file_check_directory().
- #836090 andrewlevine, alex_b: Include mapping configuration in hash.
- #853156 alex_b: Support real updates of terms.
- #858684 alex_b: Fix notices when file not found.

Feeds 6.x 1.0 Beta 4, 2010-07-25
--------------------------------

- #838018-12 Remove Formatted Number CCK mapper, cannot be properly tested, see
  #857928.

Feeds 6.x 1.0 Beta 3, 2010-07-18
--------------------------------

- #854628 DanielJohnston, alex_b: Fix user processor assigns all roles.
- #838018 infojunkie: Mapper for Formatted Number CCK field.