@@ -94,6 +94,10 @@ function _parser_common_syndication_feed_format_detect($xml) {
 function _parser_common_syndication_atom10_parse($feed_XML) {
   $parsed_source = array();
 
+  $ns = array(
+    "georss" => "http://www.georss.org/georss",
+  );
+
   $base = (string) array_shift($feed_XML->xpath("@base"));
   if (!valid_url($base, TRUE)) {
     $base = FALSE;
@@ -119,6 +123,24 @@ function _parser_common_syndication_atom10_parse($feed_XML) {
     // I don't know how standard this is, but sometimes the id is the URL.
     if (valid_url($guid, TRUE)) {
       $original_url = $guid;
+    }
+
+    $georss = (array)$news->children($ns["georss"]);
+    $geoname = '';
+    if (isset($georss['featureName'])) {
+      $geoname = "{$georss['featureName']}";
+    }
+
+    $latlon =
+    $lat =
+    $lon = NULL;
+    if (isset($georss['point'])) {
+      $latlon = explode(' ', $georss['point']);
+      $lat = "{$latlon[0]}";
+      $lon = "{$latlon[1]}";
+      if (!$geoname) {
+        $geoname = "{$lat} {$lon}";
+      }
     }
 
     $additional_taxonomies = array();
@@ -195,6 +217,18 @@ function _parser_common_syndication_atom10_parse($feed_XML) {
     else {
       $item['guid'] = $item['url'];
     }
+
+    $item['geolocations'] = array();
+    if ($lat && $lon) {
+      $item['geolocations'] = array(
+        array(
+          'name' => $geoname,
+          'lat' => $lat,
+          'lon' => $lon,
+        ),
+      );
+    }
+
     $item['tags'] = isset($additional_taxonomies['ATOM Categories']) ? $additional_taxonomies['ATOM Categories'] : array();
     $item['domains'] = isset($additional_taxonomies['ATOM Domains']) ? $additional_taxonomies['ATOM Domains'] : array();
     $parsed_source['items'][] = $item;
@@ -322,6 +356,7 @@ function _parser_common_syndication_RSS20_parse($feed_XML) {
   $ns = array (
     "content" => "http://purl.org/rss/1.0/modules/content/",
      "dc" => "http://purl.org/dc/elements/1.1/",
+     "georss" => "http://www.georss.org/georss",
   );
 
   $parsed_source = array();
@@ -340,6 +375,7 @@ function _parser_common_syndication_RSS20_parse($feed_XML) {
     if (version_compare(phpversion(), '5.1.2', '>')) {
       $content = (array)$news->children($ns["content"]);
       $dc      = (array)$news->children($ns["dc"]);
+      $georss  = (array)$news->children($ns["georss"]);
     }
     $news = (array) $news;
     $news['category'] = $category;
@@ -383,6 +419,23 @@ function _parser_common_syndication_RSS20_parse($feed_XML) {
       $guid = "{$news['guid']}";
     }
 
+    if (isset($georss['featureName'])) {
+      $geoname = "{$georss['featureName']}";
+    }
+
+    $lat =
+    $lon =
+    $latlon =
+    $geoname = NULL;
+    if (isset($georss['point'])) {
+      $latlon = explode(' ', $georss['point']);
+      $lat = "{$latlon[0]}";
+      $lon = "{$latlon[1]}";
+      if (!$geoname) {
+        $geoname = "$lat $lon";
+      }
+    }
+
     $additional_taxonomies = array();
     $additional_taxonomies['RSS Categories'] = array();
     $additional_taxonomies['RSS Domains'] = array();
@@ -413,6 +466,18 @@ function _parser_common_syndication_RSS20_parse($feed_XML) {
     }
     $item['url'] = trim($original_url);
     $item['guid'] = $guid;
+
+    $item['geolocations'] = array();
+    if (isset($geoname, $lat, $lon)) {
+      $item['geolocations'] = array(
+        array(
+          'name' => $geoname,
+          'lat' => $lat,
+          'lon' => $lon,
+        ),
+      );
+    }
+
     $item['domains'] = $additional_taxonomies['RSS Domains'];
     $item['tags'] = $additional_taxonomies['RSS Categories'];
     $parsed_source['items'][] = $item;
